--- a/busidea.html
+++ b/busidea.html
@@ -35,64 +35,53 @@
 
 
 <body>
-  <nav class="sidebar close">
-    <header>
-      <div class="image-text">
-        <span class="image">
-          <i class="fa-solid fa-house"></i>
-        </span>
+ <nav class="sidebar close">
+      <header>
+        <a href="home.html">
+        <div class="image-text">
+          <span class="image">
+            <i class="fa-solid fa-house"></i>
+          </span>
 
-        <div class="text header-text">
-          <span class="project-title">SIGMA</span>
+          <div class="text header-text">
+            <span class="project-title">SIGMA</span>
+          </div>
+        </div>
+      </a>
+        <i class="fa-solid fa-arrow-left-long"></i>
+      </header>
+
+      <div class="menu">
+        <div class="selection">
+          <ul class="selection-links">
+            <li class="link">
+              <a href="busidea.html">
+                <i class="fa-solid fa-house"></i>
+                <span class="text"> Sell </span>
+              </a>
+            </li>
+            <li class="link">
+              <a href="buy.html">
+                <i class="fa-solid fa-house"></i>
+                <span class="text"> Buy </span>
+              </a>
+            </li>
+            <li class="link">
+              <a href="merge.html">
+                <i class="fa-solid fa-house"></i>
+                <span class="text"> Merge </span>
+              </a>
+            </li>
+            <li class="link">
+              <a href="CDN/conference.html">
+                <i class="fa-solid fa-house"></i>
+                <span class="text"> Conference </span>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
-
-      <i class="fa-solid fa-arrow-left-long"></i>
-    </header>
-
-    <div class="menu">
-      <div class="selection">
-        <ul class="selection-links">
-          <li class="link">
-            <a href="#">
-              <i class="fa-solid fa-house"></i>
-              <span class="text"> Home </span>
-            </a>
-          </li>
-          <li class="link">
-            <a href="#">
-              <i class="fa-solid fa-house"></i>
-              <span class="text"> Conference </span>
-            </a>
-          </li>
-          <li class="link">
-            <a href="#">
-              <i class="fa-solid fa-house"></i>
-              <span class="text"> Auction </span>
-            </a>
-          </li>
-          <li class="link">
-            <a href="#">
-              <i class="fa-solid fa-house"></i>
-              <span class="text"> Debt </span>
-            </a>
-          </li>
-          <li class="link">
-            <a href="#">
-              <i class="fa-solid fa-house"></i>
-              <span class="text"> Games </span>
-            </a>
-          </li>
-          <li class="link">
-            <a href="#">
-              <i class="fa-solid fa-house"></i>
-              <span class="text"> Food </span>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    </nav>
 
   <div class="title-container">
     <h1>Business Idea</h1>
