--- a/busidea.html
+++ b/busidea.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Business Idea</title>
 <body>
-  <link rel="stylesheet" href="styles/busidea.css">
+  <link rel="stylesheet" href="busidea.css">
   <link
   rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Comfortaa%3A400%2C600%2C700"
@@ -35,7 +35,8 @@
 
 
 <body>
- <nav class="sidebar close">
+  
+    <nav class="sidebar close">
       <header>
         <a href="home.html">
         <div class="image-text">
@@ -631,7 +632,7 @@
       </div>
 
       <div class="btn-container">
-      <button class="next-btn" onclick="move('next')">Next</button>
+        <button class="next-btn">Next</button>
       </div>
             
         </form>
@@ -683,9 +684,9 @@
     </div>
 
 
-        <label for="idea-title">
+        <label for="ideatitle">
             <span>Idea Title</span>
-            <input id="idea-title" name="idea-title" required>
+            <input id="ideatitle" name="ideatitle" required>
             <span class="error-message" style="display:none;color:red;">Idea title is required.</span>
         </label>
 
@@ -752,7 +753,7 @@
 
 
 </div>
-<script src="busidea.js"></script>
+<script src="busidea.js" defer></script>
 </body>
 
 </html>
